[tool.poetry]
name = "exp"
version = "0.1"
packages = [
    { include = "src" }
]
description = "Experiment: ML Benchmarking"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
	    "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = "^2.1"
numpy = "^1.26"
scipy = "^1.11"
scikit-learn = "^1.4"
matplotlib = "^3.8"
mne = "^1.7"
yasa = "^0.6.4"
librosa = "^0.10.2.post1"
torch = "^2.0.1"
seaborn = "^0.13.2"
tqdm = "^4.66.2"
s3fs = "^2023.1.0"
boto3 = "^1.26"

kobe2 = { path = "../kobe2", develop = true }
lstm_ae = { path = "../algorithms/lstm_ae", develop = true }
conv_lstm_ae = { path = "../algorithms/conv_lstm_ae", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
benchmark = "src.main:main"