[tool.poetry]
name = "exp"
version = "0.1"
packages = [
    { include = "src" }
]
description = "Experiment: ML Benchmarking"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
	    "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]

# Python version for the project
python = ">=3.9,<3.14"  

# Loading and creating dataloaders
pandas = "^2.1"         # For data manipulation and analysis
mne = "^1.7"            # For processing and analyzing EEG data
numpy = "^1.26"         # For numerical computations (e.g., tensor operations)
torch = "^2.0.1"        # For creating PyTorch dataloaders
s3fs = "^2023.1.0"      # For interacting with AWS S3 file systems to load data
dask = { version = "^2024.3.0", extras = ["dataframe"] }      # For parallel computing and handling large datasets efficiently

kobe2 = { path = "../kobe2", develop = true }
lstm_ae = { url = "https://manolo-data.s3.eu-north-1.amazonaws.com/algorithms/lstm_ae-0.1-py3-none-any.whl" }
conv_lstm_ae = { url = "https://manolo-data.s3.eu-north-1.amazonaws.com/algorithms/conv_lstm_ae-0.1-py3-none-any.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
benchmark = "src.main:main"