[tool.poetry]
name = "kobe2"
version = "0.3"
packages = [
    { include = "kobe2" }
]
description = "Kobe2: Benchmarking for Machine Learning"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
	    "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"          # Python version for the project
pandas = "^2.1"                 # For data manipulation and analysis

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
