[tool.poetry]
name = "lstm_ae"
version = "0.1"
packages = [
    { include = "lstm_ae" }
]
description = "LSTM Autoencoder"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
	    "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = "^2.1"
numpy = "^1.26"
scipy = "^1.11"
scikit-learn = "^1.4"
torch = "^2.0.1"
tqdm = "^4.66.2"
boto3 = "^1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
